# browser-agent-privacy-layer

./: .gitignore  BLUEPRINT.md  README.md  pyproject.toml
Holo/: .gitignore  PROJECT_MAP.md  README.md  pyproject.toml  run_step1.sh
Holo/coreml-redactor/: .gitignore  README.md  pyproject.toml
Holo/coreml-redactor/src/plva_coreml/: __init__.py  hybrid.py  live.py  probe.py  semantics.py  vision_hybrid.py  visual_ane.py  visual_redactor.py  worker.py
Holo/coreml-redactor/tests/: test_live.py  test_semantics.py  test_visual_redactor.py
Holo/docs/egress/: bootstrap-pf.md  pf-plva.anchor
Holo/holo-skills/plva-placeholders/: SKILL.md
Holo/plvas-v3/: .gitattributes  .gitignore  LICENSES.md  README.md  evaluation.html  index.html  models.lock.json  package-lock.json  package.json  vite.config.js
Holo/plvas-v3/docs/decisions/: 0001-model-and-runtime-contracts.md
Holo/plvas-v3/scripts/: fetch-models.mjs  inspect-models.mjs  model-lock.mjs  model-lock.test.mjs  recompute-evaluation.mjs  redact.mjs  verify-models.mjs
Holo/plvas-v3/src/: main.js  rampart.js  styles.css
Holo/plvas-v3/src/evaluation/: fixtures.js  main.js  metrics.js  styles.css
Holo/plvas-v3/src/ocr/: policy.js  postprocess.js  rapidocr.js  rules.js  semantic.js
Holo/plvas-v3/src/visual/: detector.js  fusion.js  hybrid.js  postprocess.js  render.js  ui.js
Holo/plvas-v3/test/: evaluation-metrics.test.mjs  heuristics.test.mjs  ocr-hybrid.test.mjs  render.test.mjs  visual-postprocess.test.mjs
Holo/plvas-v3/training/: MODEL_CARD.md  README.md  __init__.py  baseline_gate.py  build_tokenizer.py  calibrate.py  cross_runtime_report.schema.json  data_manifest.json  evaluate.py  export_onnx.py  freeze_rampart_baseline.py  inspect_models.py  labels.json  locked_asset.py  modal-requirements.lock.txt  modal_app.py  modeling.py  ocr-requirements.lock.txt  prepare_data.py  publish.py  requirements.lock.txt  schema.py  sync_model_lock.py  synth_screen.py  tokenizer_goldens.py  train.py  validate_artifacts.py  visual-requirements.lock.txt  visual-train-requirements.lock.txt
Holo/plvas-v3/training/ocr/: __init__.py  build_semantic_holdout.py  generate_fixtures.py  reference.py  reference_contract.json
Holo/plvas-v3/training/runtime-parity/: package-lock.json  package.json  verify.mjs  verify_visual.mjs
Holo/plvas-v3/training/semantic/: __init__.py  rampart_contract.json  rampart_fixtures.jsonl  rampart_reference.py
Holo/plvas-v3/training/tests/: test_data.py  test_hybrid_contracts.py  test_modeling.py  test_visual_quantization.py  test_visual_stable_training.py  test_visual_supplemental.py  test_visual_supplemental_staging.py  test_visual_synthetic.py  (+2 more)
Holo/redactor-worker/: index.html  package-lock.json  package.json  vite.config.js
Holo/redactor-worker/src/: worker.js
Holo/src/plva_proxy/: benchmark.py  demo.py  demo_ui.html  egress_preflight.py  egress_verify.py  landing_ui.html  live.py  privacy.py  providers.py  proxy.py  redactor.py  stopped_exec.py  tools.py
Holo/tests/: conftest.py  test_accelerated_redactor.py  test_benchmark.py  test_call_history.py  test_demo.py  test_demo_ui.py  test_egress_preflight.py  test_egress_verify.py  test_history_store.py  test_privacy.py  test_privacy_integration.py  test_providers.py  test_proxy.py  test_proxy_hooks.py  test_redaction.py  test_tool_loop.py  test_tools.py
Holo/verification/: cua-live-acceptance.md  cua-placeholder-optimization.md  step-1-runbook.md  step-1-status.md  step-4-accelerated-redaction.md  step-4-obscuring.md  step-5-privacy-core.md  step-5a-placeholder-teaching.md  step-6-policy.md
(+47 files in other folders)
