[project]
name = "plva-proxy"
version = "0.1.0"
description = "Fail-closed privacy proxy for the HoloDesktop computer-use agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128.0,<0.129",
  "httpx>=0.28.1,<0.29",
  "pillow>=12.1.0,<13",
  "uvicorn>=0.40.0,<0.41",
]

[project.scripts]
plva-proxy = "plva_proxy.cli:main"
plva-probe = "plva_proxy.contract_probe:main"

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mypy>=1.19.1,<2",
  "pytest>=9.0.2,<10",
  "pytest-asyncio>=1.3.0,<2",
  "pytest-cov>=7.0.0,<8",
  "ruff>=0.14.14,<0.15",
  "types-pillow>=10.2.0.20240822",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plva_proxy"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --cov=plva_proxy --cov-report=term-missing --cov-fail-under=80"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["plva_proxy"]
